cmake_minimum_required(VERSION 3.24)
project(c___learning)

set(CMAKE_CXX_STANDARD 17)

add_executable(c___learning 1.1全局区.cpp 1.2栈区.cpp 1.2栈区.cpp 1.2栈区.cpp cmake-build-debug/3堆区.cpp 1.4new操作符.cpp 2.1引用基本语法.cpp 2.2引用的注意事项.cpp 2.3引用做函数参数.cpp 2.4引用做函数返回值.cpp 2.5引用的本质.cpp 2.6常量引用.cpp 3.1函数默认参数.cpp 3.2函数的占位参数.cpp 3.3.1函数重载概述.cpp 3.3.2函数重载的注意事项.cpp)
